implement age display

--- a/app/app.json
+++ b/app/app.json
@@ -7,7 +7,7 @@
     "window": {
         "backgroundTextStyle": "dark",
         "navigationBarBackgroundColor": "#373b3e",
-        "navigationBarTitleText": "相册回收站",
+        "navigationBarTitleText": "小以沫成长相册",
         "windowBackground": "#1c1b16",
         "navigationBarTextStyle": "white"
     }
